vlib/v/checker/tests/option_concrete_type_err.vv
fn f[T]() T {
	return none
}

r := f[?int]()
